Add a post method for fun
