# go/server/releaser/releases.pb.go
@@ -14,6 +14,7 @@ It has these top-level messages:
 	Channel
 	ChannelReleaseRequest
 	ReleaseRequest
+	AddReleaseResponse
 */
 package releaser
 
@@ -98,12 +99,22 @@ func (m *ReleaseRequest) String() string            { return proto.CompactTextSt
 func (*ReleaseRequest) ProtoMessage()               {}
 func (*ReleaseRequest) Descriptor() ([]byte, []int) { return fileDescriptorReleases, []int{4} }
 
+type AddReleaseResponse struct {
+	ReleaseID string `protobuf:"bytes,1,opt,name=ReleaseID,json=releaseID,proto3" json:"ReleaseID,omitempty"`
+}
+
+func (m *AddReleaseResponse) Reset()                    { *m = AddReleaseResponse{} }
+func (m *AddReleaseResponse) String() string            { return proto.CompactTextString(m) }
+func (*AddReleaseResponse) ProtoMessage()               {}
+func (*AddReleaseResponse) Descriptor() ([]byte, []int) { return fileDescriptorReleases, []int{5} }
+
 func init() {
 	proto.RegisterType((*ChannelReleases)(nil), "releaser.ChannelReleases")
 	proto.RegisterType((*Release)(nil), "releaser.Release")
 	proto.RegisterType((*Channel)(nil), "releaser.Channel")
 	proto.RegisterType((*ChannelReleaseRequest)(nil), "releaser.ChannelReleaseRequest")
 	proto.RegisterType((*ReleaseRequest)(nil), "releaser.ReleaseRequest")
+	proto.RegisterType((*AddReleaseResponse)(nil), "releaser.AddReleaseResponse")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -119,6 +130,7 @@ const _ = grpc.SupportPackageIsVersion3
 type ReleasesClient interface {
 	GetChannelReleases(ctx context.Context, in *ChannelReleaseRequest, opts ...grpc.CallOption) (*ChannelReleases, error)
 	GetRelease(ctx context.Context, in *ReleaseRequest, opts ...grpc.CallOption) (*Release, error)
+	AddRelease(ctx context.Context, in *Release, opts ...grpc.CallOption) (*AddReleaseResponse, error)
 }
 
 type releasesClient struct {
@@ -147,11 +159,21 @@ func (c *releasesClient) GetRelease(ctx context.Context, in *ReleaseRequest, opt
 	return out, nil
 }
 
+func (c *releasesClient) AddRelease(ctx context.Context, in *Release, opts ...grpc.CallOption) (*AddReleaseResponse, error) {
+	out := new(AddReleaseResponse)
+	err := grpc.Invoke(ctx, "/releaser.Releases/AddRelease", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // Server API for Releases service
 
 type ReleasesServer interface {
 	GetChannelReleases(context.Context, *ChannelReleaseRequest) (*ChannelReleases, error)
 	GetRelease(context.Context, *ReleaseRequest) (*Release, error)
+	AddRelease(context.Context, *Release) (*AddReleaseResponse, error)
 }
 
 func RegisterReleasesServer(s *grpc.Server, srv ReleasesServer) {
@@ -194,6 +216,24 @@ func _Releases_GetRelease_Handler(srv interface{}, ctx context.Context, dec func
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Releases_AddRelease_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Release)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ReleasesServer).AddRelease(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/releaser.Releases/AddRelease",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ReleasesServer).AddRelease(ctx, req.(*Release))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _Releases_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "releaser.Releases",
 	HandlerType: (*ReleasesServer)(nil),
@@ -206,31 +246,37 @@ var _Releases_serviceDesc = grpc.ServiceDesc{
 			MethodName: "GetRelease",
 			Handler:    _Releases_GetRelease_Handler,
 		},
+		{
+			MethodName: "AddRelease",
+			Handler:    _Releases_AddRelease_Handler,
+		},
 	},
 	Streams:  []grpc.StreamDesc{},
 	Metadata: fileDescriptorReleases,
 }
 
 var fileDescriptorReleases = []byte{
-	// 305 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0xe2, 0xe2, 0x2b, 0x4a, 0xcd, 0x49,
-	0x4d, 0x2c, 0x4e, 0x2d, 0xd6, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0xe2, 0x80, 0xf2, 0x8b, 0xa4,
-	0x64, 0xd2, 0xf3, 0xf3, 0xd3, 0x73, 0x52, 0xf5, 0x13, 0x0b, 0x32, 0xf5, 0x13, 0xf3, 0xf2, 0xf2,
-	0x4b, 0x12, 0x4b, 0x32, 0xf3, 0xf3, 0xa0, 0xea, 0x94, 0x72, 0xb9, 0xf8, 0x9d, 0x33, 0x80, 0xc2,
-	0xa9, 0x39, 0x41, 0x50, 0x03, 0x84, 0xb4, 0xb9, 0xd8, 0xa1, 0x42, 0x12, 0x8c, 0x0a, 0x8c, 0x1a,
-	0xdc, 0x46, 0x82, 0x7a, 0x30, 0xc3, 0xf4, 0x60, 0x6a, 0xd9, 0x93, 0x21, 0x0c, 0x21, 0x5d, 0x2e,
-	0x0e, 0x98, 0x46, 0x09, 0x26, 0x05, 0x66, 0x54, 0xd5, 0x50, 0x99, 0x20, 0x98, 0x63, 0x8a, 0x95,
-	0x80, 0x66, 0x43, 0x05, 0x85, 0xf8, 0xb8, 0x98, 0x3c, 0x5d, 0xc0, 0x36, 0x70, 0x06, 0x31, 0x65,
-	0xba, 0x08, 0x09, 0x70, 0x31, 0x07, 0x7b, 0x38, 0x02, 0x0d, 0x01, 0x09, 0x30, 0x17, 0x7b, 0x38,
-	0x2a, 0xe9, 0xc2, 0x1d, 0x82, 0xa1, 0x58, 0x88, 0x8b, 0xc5, 0x2f, 0x31, 0x37, 0x15, 0xaa, 0x9a,
-	0x25, 0x0f, 0xc8, 0x56, 0x32, 0xe5, 0x12, 0x45, 0xf5, 0x4a, 0x50, 0x6a, 0x61, 0x69, 0x6a, 0x71,
-	0x89, 0x90, 0x0c, 0x17, 0x27, 0x54, 0x02, 0x6e, 0x06, 0x67, 0x32, 0x4c, 0x40, 0x49, 0x8f, 0x8b,
-	0x0f, 0x53, 0x3d, 0x54, 0x04, 0xa1, 0xbe, 0x08, 0x26, 0x60, 0xf4, 0x88, 0x11, 0xe1, 0x65, 0xa1,
-	0x2a, 0x2e, 0x21, 0xf7, 0xd4, 0x12, 0xf4, 0x10, 0x94, 0xc7, 0x0c, 0x30, 0x14, 0x1b, 0xa4, 0x24,
-	0x71, 0x29, 0x28, 0x56, 0xd2, 0x68, 0xba, 0xfc, 0x64, 0x32, 0x93, 0x92, 0x90, 0x82, 0x7e, 0x99,
-	0xa1, 0x3e, 0xd4, 0x95, 0xf1, 0xb0, 0xf0, 0xd3, 0xaf, 0x86, 0x7b, 0xa4, 0x56, 0x28, 0x8a, 0x8b,
-	0x0b, 0x68, 0x37, 0x2c, 0x38, 0x25, 0x30, 0x83, 0x1d, 0x6a, 0x19, 0x66, 0x84, 0x28, 0xc9, 0x83,
-	0x2d, 0x91, 0x14, 0x12, 0x07, 0x59, 0x02, 0x95, 0xd5, 0xaf, 0x86, 0x7b, 0xba, 0x36, 0x89, 0x0d,
-	0x9c, 0x3a, 0x8c, 0x01, 0x01, 0x00, 0x00, 0xff, 0xff, 0x20, 0xe2, 0x65, 0x5a, 0x57, 0x02, 0x00,
-	0x00,
+	// 348 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0x7c, 0x52, 0xc1, 0x4e, 0xf2, 0x40,
+	0x10, 0x0e, 0x85, 0xfc, 0xc0, 0x90, 0xf0, 0xe3, 0x24, 0x2a, 0x10, 0x12, 0xc8, 0x9e, 0x88, 0x86,
+	0x6e, 0xc4, 0x78, 0xf1, 0x46, 0x24, 0x11, 0x2f, 0x1e, 0x6a, 0xbc, 0x78, 0x31, 0x15, 0x36, 0x48,
+	0x02, 0xdd, 0xda, 0xad, 0x1e, 0x24, 0x5c, 0x7c, 0x05, 0x9f, 0xc6, 0xe7, 0xf0, 0x15, 0x7c, 0x10,
+	0x97, 0x3a, 0xdb, 0x5a, 0x37, 0x7a, 0xdb, 0x7e, 0xf3, 0xcd, 0xf7, 0xcd, 0x7c, 0x53, 0xa8, 0x47,
+	0x62, 0x29, 0x7c, 0x25, 0x94, 0x1b, 0x46, 0x32, 0x96, 0x58, 0xa1, 0xef, 0xa8, 0xdd, 0x99, 0x4b,
+	0x39, 0x5f, 0x0a, 0xee, 0x87, 0x0b, 0xee, 0x07, 0x81, 0x8c, 0xfd, 0x78, 0x21, 0x03, 0xe2, 0xb1,
+	0x15, 0xfc, 0x3f, 0xbb, 0xd7, 0xb0, 0x58, 0x7a, 0x24, 0x80, 0x87, 0x50, 0x26, 0xa8, 0x59, 0xe8,
+	0x15, 0xfa, 0xb5, 0xe1, 0x8e, 0x6b, 0xc4, 0x5c, 0xc3, 0x2d, 0x4f, 0xbf, 0x1e, 0x38, 0x80, 0x8a,
+	0x69, 0x6c, 0x3a, 0xbd, 0x62, 0x9e, 0x4d, 0x15, 0xcf, 0x0c, 0xa3, 0x98, 0xd6, 0x26, 0x10, 0xeb,
+	0xe0, 0x5c, 0x8c, 0x13, 0x87, 0xaa, 0xe7, 0x2c, 0xc6, 0xd8, 0x80, 0xe2, 0xd5, 0x64, 0xa4, 0x45,
+	0xb6, 0x40, 0x51, 0x4d, 0x46, 0x6c, 0x90, 0x0e, 0x62, 0x91, 0x11, 0x4a, 0x97, 0xfe, 0x4a, 0x10,
+	0xbb, 0x14, 0xe8, 0x37, 0x3b, 0x81, 0xdd, 0xfc, 0x2a, 0x9e, 0x78, 0x78, 0x14, 0x2a, 0xc6, 0x0e,
+	0x54, 0xa9, 0x90, 0x6a, 0x54, 0xa7, 0x06, 0x60, 0x2e, 0xd4, 0x6d, 0x3e, 0x21, 0x19, 0x3f, 0x32,
+	0x00, 0x1b, 0x02, 0x8e, 0x66, 0xb3, 0xb4, 0x45, 0x85, 0x3a, 0x4c, 0xf1, 0x77, 0xcf, 0xf0, 0xcd,
+	0xc9, 0x62, 0xc2, 0x67, 0xc0, 0x73, 0x11, 0xff, 0x4c, 0xbd, 0x6b, 0x87, 0x9c, 0x9b, 0xaa, 0xdd,
+	0xfa, 0x8d, 0xa0, 0x58, 0xff, 0xe5, 0xfd, 0xe3, 0xd5, 0x61, 0xd8, 0xe3, 0x4f, 0x47, 0x9c, 0x36,
+	0xbb, 0x35, 0x99, 0xf3, 0x75, 0xba, 0xfc, 0x06, 0x6f, 0x00, 0xb4, 0xb7, 0x39, 0x41, 0xd3, 0x3e,
+	0x15, 0x99, 0xd9, 0x47, 0x64, 0xdd, 0xc4, 0xa4, 0x85, 0xfb, 0x5b, 0x13, 0xaa, 0xf2, 0x75, 0xba,
+	0xf4, 0x06, 0xaf, 0x01, 0xb2, 0x60, 0xd0, 0x56, 0x68, 0x77, 0x32, 0xc8, 0x4e, 0x90, 0xed, 0x25,
+	0xfa, 0x0d, 0x56, 0xfb, 0xa6, 0x7f, 0x5a, 0x38, 0xb8, 0xfb, 0x97, 0xfc, 0xa8, 0xc7, 0x9f, 0x01,
+	0x00, 0x00, 0xff, 0xff, 0x54, 0xb0, 0x00, 0x14, 0xe2, 0x02, 0x00, 0x00,
 }
