# go/server/releaser/releases.pb.gw.go
@@ -81,6 +81,19 @@ func request_Releases_GetRelease_0(ctx context.Context, marshaler runtime.Marsha
 
 }
 
+func request_Releases_AddRelease_0(ctx context.Context, marshaler runtime.Marshaler, client ReleasesClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Release
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil {
+		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.AddRelease(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
 // RegisterReleasesHandlerFromEndpoint is same as RegisterReleasesHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterReleasesHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
@@ -167,6 +180,34 @@ func RegisterReleasesHandler(ctx context.Context, mux *runtime.ServeMux, conn *g
 
 	})
 
+	mux.Handle("POST", pattern_Releases_AddRelease_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(ctx)
+		defer cancel()
+		if cn, ok := w.(http.CloseNotifier); ok {
+			go func(done <-chan struct{}, closed <-chan bool) {
+				select {
+				case <-done:
+				case <-closed:
+					cancel()
+				}
+			}(ctx.Done(), cn.CloseNotify())
+		}
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, req)
+		if err != nil {
+			runtime.HTTPError(ctx, outboundMarshaler, w, req, err)
+		}
+		resp, md, err := request_Releases_AddRelease_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Releases_AddRelease_0(ctx, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -174,10 +215,14 @@ var (
 	pattern_Releases_GetChannelReleases_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "channel_releases", "ChannelID"}, ""))
 
 	pattern_Releases_GetRelease_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "release", "ReleaseID"}, ""))
+
+	pattern_Releases_AddRelease_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "release"}, ""))
 )
 
 var (
 	forward_Releases_GetChannelReleases_0 = runtime.ForwardResponseMessage
 
 	forward_Releases_GetRelease_0 = runtime.ForwardResponseMessage
+
+	forward_Releases_AddRelease_0 = runtime.ForwardResponseMessage
 )
